# Python_Piscine

Module0/ex6/: ft_count_harvest_recursive.py
Module0/ex7/: ft_seed_inventory.py
Module1/ex2/: ft_plant_growth.py
Module1/ex3/: ft_plant_factory.py
Module1/ex4/: ft_garden_security.py
Module1/ex5/: ft_plant_types.py
Module1/ex6/: ft_garden_analytics.py
Module10/ex0/: lambda_spells.py
Module10/ex1/: higher_magic.py
Module10/ex2/: scope_mysteries.py
Module10/ex3/: functools_artifacts.py
Module10/ex4/: decorator_mastery.py
Module2/ex0/: ft_first_exception.py
Module2/ex1/: ft_raise_exception.py
Module2/ex2/: ft_different_errors.py
Module2/ex3/: ft_custom_errors.py
Module2/ex4/: ft_finally_block.py
Module3/: README.md  asavoir.txt  ff.c
Module3/ex0/: ft_command_quest.py
Module3/ex1/: ft_score_analytics.py
Module3/ex2/: ft_coordinate_system.py
Module3/ex3/: ft_achievement_tracker.py
Module3/ex4/: ft_inventory_system.py
Module3/ex5/: ft_data_stream.py
Module3/ex6/: ft_data_alchemist.py
Module4/: defense.md
Module4/ex0/: ft_ancient_text.py
Module4/ex1/: ft_archive_creation.py
Module4/ex2/: ft_stream_management.py
Module4/ex3/: ft_vault_security.py
Module5/: README.md
Module6/: README.md  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py
Module7/: README.md  battle.py  capacitor.py  tournament.py
Module8/: DEFENSE_ORALE.md  README.md
Module8/ex1/: loading.py  pyproject.toml  requirements.txt
(+26 files in other folders)
