[tool.poetry]
package-mode = false
name = "matrix-loading"
version = "0.1.0"
description = "Matrix data analysis pipeline"
authors = ["lscheirm@student.42belgium.be"]
[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.3"
numpy = "^1.26.4"
matplotlib = "^3.8.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"